--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "anix": "^0.3.3",
+    "axios": "^0.20.0",
     "gh-pages": "^3.1.0",
     "jquery": "^3.2.1",
     "particles-bg": "^2.3.12",
